--- a/_posts/2020-04-01-R-package.md
+++ b/_posts/2020-04-01-R-package.md
@@ -1,6 +1,6 @@
 ---
-title: "Data Visualisation with ggplot"
-date: 2020-02-01
+title: "R package"
+date: 2020-06-01
 tags: [data visualisation, ggplot]
 header:
   image: "/images/energy_ggplot.png"
@@ -8,11 +8,11 @@ excerpt: "Data visualisation, ggplot, spotify"
 mathjax: "true"
 ---
 
+
 # Introduction
 
-This project is about describing the spotify_songs.csv dataset from the 4th week of #tidytuesday at https://github.com/rfordatascience/tidytuesday and expoloring possible problem/questions.
+I created the mr R package that queries historical exchange rates for any currency (meaning configurable symbol and base currency) for the past number of days and converts it to Hungarian Forint.
+I also included a unit test for the forint function to make sure that forint(42) returns 42 HUF.
 
-You can [get the PDF here](/assets/Spotify.pdf) .
-
-You can [get the html here](/assets/Spotify.html) .
+[-> R code](https://github.com/lisahlmsch/work_samples/tree/master/mr-package)
 
