update headers and images

--- a/_posts/2020-04-01-R-package.md
+++ b/_posts/2020-04-01-R-package.md
@@ -1,15 +1,15 @@
 ---
 title: "R package"
 date: 2020-06-01
-tags: [data visualisation, ggplot]
+tags: [R, package]
 header:
-  image: "/images/energy_ggplot.png"
-excerpt: "Data visualisation, ggplot, spotify"
+  image: "/images/Rpackage.png"
+excerpt: "R package"
 mathjax: "true"
 ---
 
 
-# Introduction
+## Introduction
 
 I created the mr R package that queries historical exchange rates for any currency (meaning configurable symbol and base currency) for the past number of days and converts it to Hungarian Forint.
 I also included a unit test for the forint function to make sure that forint(42) returns 42 HUF.
